banners is now called banners e.g. banner_512x128

--- a/template/index.html
+++ b/template/index.html
@@ -1,5 +1,12 @@
 <meta charset="UTF-8">
 <script type="text/javascript" src="../_misc/bna.js"></script>
+<style type="text/css">
+	
+</style>
 <h1>Template</h1>
-<div class="banners_512x128"></div>
-<div class="banners_128x512"></div>
+<div class="banner_512x128"></div>
+<div class="banner_128x512"></div>
+
+<script type="text/javascript">
+"use strict";
+</script>
